--- a/web01/index.html
+++ b/web01/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Loja Virtual .digital - Desenvolvimento de loja virtual</title>
+    <title>Loja Virtual .digital - SUA LOJA PRONTA PARA VENDER EM 1 CLIQUE</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -119,49 +119,49 @@
                                 <i class="fa fa-cloud fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Provedor de Hospedagem</strong>
                                 </h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <!-- <a href="#" class="btn btn-light">Saiba mais</a> -->
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
+                                <i class="fa fa-google fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Indexação nos buscadores</strong>
                                 </h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <!-- <a href="#" class="btn btn-light">Saiba mais</a> -->
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
+                                <i class="fa fa-truck fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Cálculo de Frete</strong>
                                 </h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <!-- <a href="#" class="btn btn-light">Saiba mais</a> -->
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+                                <i class="fa fa-credit-card fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Pagamento Online</strong>
                                 </h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <!-- <a href="#" class="btn btn-light">Saiba mais</a> -->
                             </div>
                         </div>
                     </div>
@@ -270,9 +270,9 @@
                         </li>
                     </ul>
                     <hr class="small">
-                    <p class="text-muted">Loja Virtual .digital - WebCA Internet © 2011 - 2016</p>
-                    <p class="text-muted">Webca Serviços de Internet e Tecnologia / CNPJ: 13.391.967/0001­-93 / CCM : 4.248.789-7</p>
-                    <p class="text-muted">Atendimento ao cliente: e-mail contato@lojavirtual.digital</p>
+                    <p class="text-muted">Loja Virtual .digital - WebCA Internet © 2011 - 2016<br>
+                    Webca Serviços de Internet e Tecnologia / CNPJ: 13.391.967/0001­-93 / CCM : 4.248.789-7<br>
+                    Atendimento ao cliente: e-mail contato@lojavirtual.digital</p>
                 </div>
             </div>
         </div>
