--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,52 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!-- Facebook Like box -->
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.5&appId=1427063280945050";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+    <!-- FIM Facebook Like box -->
+
+    <!--Start of Zopim Live Chat Script-->
+    <script type="text/javascript">
+    window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
+    d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
+    _.push(o)};z._=[];z.set._=[];$.async=!0;$.setAttribute('charset','utf-8');
+    $.src='//v2.zopim.com/?2cQwfyblujZ70I5VuozVJQAV8RxfHpLn';z.t=+new Date;$.
+    type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
+    </script>
+    <!--End of Zopim Live Chat Script-->
+
+    <!-- Pingdom -->
+    <script>
+    var _prum = [['id', '578f9a2eabe53da82705abdb'],
+                 ['mark', 'firstbyte', (new Date()).getTime()]];
+    (function() {
+        var s = document.getElementsByTagName('script')[0]
+          , p = document.createElement('script');
+        p.async = 'async';
+        p.src = '//rum-static.pingdom.net/prum.min.js';
+        s.parentNode.insertBefore(p, s);
+    })();
+    </script>
+    <!-- FIM Pingdom -->
+
+    <!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-57351164-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+    <!-- FIM Google Analytics -->
+
 </head>
 
 <body>
@@ -75,7 +121,7 @@
 
             <div class="col-md-6 col-right primeiro-texto-imagem">
                 <div class="logo">
-                    <img src="img/logo.png">
+                    <img src="img/logo.png"><br>
                 </div>
             </div>
 
@@ -83,7 +129,9 @@
                 <h3>Sua loja pronta para vender em 1 clique</h3>
                 <h4>Já pensamos em tudo e criamos modelos completos com tudo que seu ecommerce precisa. Comece agora e confira!</h4>
                 <br>
-                <a href="#about" class="btn btn-light btn-lg criarloja">Criar minha loja</a>    
+                <a href="#about" class="btn btn-light btn-lg criarloja">Criar minha loja</a>
+                <br>
+                <div style="margin-top: 20px;" class="fb-like" data-href="https://facebook.com/lojavirtual.digital" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
 
             </div>
         </div>
