menu e links demo

--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
 <body>
 
     <!-- Navigation -->
-    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle">Menu <i class="fa fa-bars"></i></a>
+    <a id="menu-toggle" href="#" class=" btn-menu btn-lg toggle">Menu <i class="fa fa-bars"></i></a>
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-close btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
@@ -140,8 +140,8 @@
                     <div class="header-modelo-2016-txt">
                         <h4>Veja a demonstração online</h4>
                         <h5>
-                        <a href="#" class="btn btn-lg btn-home-demo-site">Demonstração da loja</a>
-                            <a href="#" class="btn btn-lg btn-home-demo-admin">Demonstração do admin</a>
+                            <a href="http://demo.lojavirtual.digital/" target="_blank" class="btn btn-lg btn-home-demo-site">Demonstração da loja</a>
+                            <a href="http://demo.lojavirtual.digital/admin" target="_blank" class="btn btn-lg btn-home-demo-admin">Demonstração do admin</a>
                         </h5>
                         <h5><a href="#loja">+ mais informações</a></h5>
                     </div>
@@ -194,8 +194,8 @@
                                 <h3>Modelo: Leezy Store 2.1</h3>
                                 <h5>Última atualização: 12/11/2016</h5>
                                 <br>
-                                <a href="#" class="btn btn-lg btn-demo-site">Demonstração da loja</a>
-                                <a href="#" class="btn btn-lg btn-demo-admin">Demonstração do admin</a>
+                                <a href="http://demo.lojavirtual.digital/" target="_blank" class="btn btn-lg btn-demo-site">Demonstração da loja</a>
+                                <a href="http://demo.lojavirtual.digital/admin" target="_blank" class="btn btn-lg btn-demo-admin">Demonstração do admin</a>
                             </div>
                         </div>
                     </div>
