--- a/public/index.html
+++ b/public/index.html
@@ -124,6 +124,8 @@
             <div class="col-md-6 col-right primeiro-texto-imagem">
                 <div class="logo">
                     <img src="img/logo.png"><br>
+                
+                    <img class="home-imgdemo" src="img/loja-demo.png" style="max-width: 160px; margin-top: 120px;"><br>
                 </div>
             </div>
 
