imagem para jpg

--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,7 @@
                 <div class="logo">
                     <img src="img/logo.png"><br>
                 
-                    <img class="home-imgdemo" src="img/loja-demo.png" style="max-width: 160px; margin-top: 120px;"><br>
+                    <img class="home-imgdemo" src="img/loja-demo.jpg" style="max-width: 160px; margin-top: 120px;"><br>
                 </div>
             </div>
 
