criar minha loja texto

--- a/public/index.html
+++ b/public/index.html
@@ -123,9 +123,9 @@
 
             <div class="col-md-6 col-left primeiro-texto">
                 <h3>Aqui sua loja já está pronta!</h3>
-                <h4>Já pensamos em tudo e criamos o ecommerce perfeito para o melhor desempenho em suas vendas.</h4>
+                <h4>Já pensamos em tudo e criamos o ecommerce perfeito para o melhor desempenho em suas vendas. Faça o teste em 1 clique.</h4>
                 <br>
-                <a href="#about" class="btn btn-light btn-lg criarloja">Faça o teste em 1 clique</a>
+                <a href="#about" class="btn btn-light btn-lg criarloja">Criar minha loja</a>
                 
                 <br>
 
