--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
       js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.5&appId=1427063280945050";
+      js.src = "//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.8&appId=805023986191114";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
     <!-- FIM Facebook Like box -->
@@ -117,7 +117,9 @@
                 <div class="logo">
                     <img src="img/logo.png"><br>
                 
-                    <img class="home-imgdemo" src="img/loja-demo.jpg" style="max-width: 160px; margin-top: 120px;"><br>
+                    <div class="home-imgdemo">
+                        <img src="img/loja-demo.jpg">
+                    </div>
                 </div>
             </div>
 
@@ -129,7 +131,6 @@
                 
                 <br>
 
-                <h4>Modelo Leezy Store 2.1</h4>
                 <div>
                     <div class="header-modelo-2016-txt">
                         <h4>Veja a demonstração online</h4>
@@ -138,6 +139,7 @@
                             <a href="http://demo.lojavirtual.digital/admin" target="_blank" class="btn btn-lg btn-home-demo-admin">Demonstração do admin</a>
                         </h5>
                         <h5><a href="#loja">+ mais informações</a></h5>
+                        <div class="fb-like" data-href="https://facebook.com/lojavirtual.digital" data-layout="button_count" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
                     </div>
                 </div>
             </div>
