--- a/public/index.html
+++ b/public/index.html
@@ -112,7 +112,6 @@
     <!-- Home -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-
             <div class="col-md-6 col-right primeiro-texto-imagem">
                 <div class="logo">
                     <img src="img/logo.png"><br>
@@ -127,8 +126,8 @@
                 <h3>Aqui sua loja já está pronta!</h3>
                 <h4>Já pensamos em tudo e criamos o ecommerce perfeito para o melhor desempenho em suas vendas. Faça o teste em 1 clique.</h4>
                 <br>
-                <a href="#about" class="btn btn-light btn-lg criarloja">Criar minha loja</a>
-                
+                <a data-fancybox-type="iframe" href="assine.html" class="btn btn-light btn-lg criarloja various">Criar minha loja</a>
+
                 <br>
 
                 <div>
@@ -343,10 +342,10 @@
                                 <h2>Chat de vendas online</h2>
                             </div>
 
-                            <div class="assinatura-item">
+                            <a class="various" data-fancybox-type="iframe" href="assine.html"><div class="assinatura-item">
                                 <i class="fa fa-credit-card assinatura-checked-item" aria-hidden="true"></i>
                                 <h2>Compra online <!-- <span style="font-size: 18px;">(Ativação automatica)</span>--></h2>
-                            </div>
+                            </div></a>
                         </div>
                     </div>
                     <!-- /.row (nested) -->
